Fixed Primes.ajs example in Console
VarCommand with tests
InvokeExpressionExpression with tests and parser support
New file tests: Function.ajs, FunctionClass.ajs
	FunctionIncrement.ajs, FunctionMakeIncrement.ajs
Environment property in ICallable
DynamicObject and DynamicClassicObject now use ICallable.Environment
var <variable> in Parser with tests
var in for command with tests
var in foreach command with tests
New file tests: ScopeVar.ajs, ScopeVarFor.ajs, ScopeVarForEach.ajs
IBindingEnviroment.SetLocalValue
StyleCop improvement
New file test: ClassObjectNoThis.ajs
machine.Environment is a BindingEnvironment (it was a LocalBindingEnvironment)
BindingEnvironment set value on parent if it is ObjectEnvironment and name is defined in object
LocalBindingEnvironment set value on parent if it is not null and not local defined
GlobalCommand with tests
global support in Parser
IBindingEnvironment.DefineGlobal with tests
New file test: Global.ajs

2010-01-10
IReference
IChannel
Channel implements IChannel, IReference
SetValueCommand, GetValueExpression
AjSharp now translate <- to SetValueCommand or GetValueExpression
Future implementation with tests

2010-01-17
QueueChannel with tests
QueueChannel in AjSharp machine
PrimesWithQueueChannels.ajsp in AjSharp.Console examples
Implementing functional examples in tests: 
FunctionalRunningSum.ajs, FunctionalRunningSumParam.ajs,
FunctionalCall
Call in Function
Invoke method in IObject, DynamicObject

2010-02-10
DefineAgentCommand
AgentFunction
agent keyword in Parser with tests

2010-02-11
Invoke AgentFunction
AgentObject: Launch, channel, SendInvoke, Execute
AgentClass new instance
AgentCall.ajs first example

2010-02-13
default keyword in class methods
Support for IsDefault in Function
Default method invocation in Dynamic Classic objects

2010-02-14
Support for calling native methods on DynamicObject, DynamicClassicObject
New examples with default method: DefaultMethodProxy.ajs, DefaultMethodLoadBalancer.ajs